refactoring: for문, 확장 for문 stream으로 교체 및 validation로직 Optinal처리