@@ -1,19 +1,18 @@
 package laddarGame.dto;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
 public class LineDto {
 
-    private List<Boolean> line;
+    private final List<Boolean> line;
 
     public LineDto(List<Boolean> line) {
         this.line = line;
     }
 
     public LineDto(boolean first, boolean second, boolean third, boolean fourth) {
-        this.line = Arrays.asList(first, second, third, fourth);
+        this.line = List.of(first, second, third, fourth);
     }
 
     public List<Boolean> getLine() {
